--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.0.8",
         "sensio/framework-extra-bundle": "^5.0",
         "symfony/console": "^3.3",
+        "symfony/debug-bundle": "^3.3",
         "symfony/framework-bundle": "^3.3",
         "symfony/monolog-bundle": "^3.1",
         "symfony/profiler-pack": "^1.0",
